--- a/components/home-page/hero/index.module.css
+++ b/components/home-page/hero/index.module.css
@@ -4,14 +4,16 @@
   padding: var(--size-8) 0;
 }
 
-.image {
+.contentStyle {
   width: 300px;
   height: 300px;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
   border-radius: 50%;
   overflow: hidden;
-  background-color: var(--color-grey-700);
   margin: auto;
+  background-color: var(--color-grey-700);
+  line-height: 160px;
+
 }
 
 .image img {
@@ -33,4 +35,9 @@
   width: 90%;
   max-width: 40rem;
   margin: auto;
+}
+
+.hero span {
+  font-size: var(--size-6);
+  color: var(--color-grey-200);
 }
