--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,11 @@ $secondary-color: #17c1ce;
 $gray-light-color: #f3f4fa;
 $white-color: #ffffff;
 $blue-light-color: #eef2ff;
+$color-grey-900: var(--color-grey-900);
+$black-color: black;
+$color-bg-hover: #edeef0;
+$color-bg-dropdown: #f9f9f9;
+$color-button-bg: #4f46e5;
 
 /* Fonts */
 $primary-font: 'Poppins', sans-serif;
