fetch fix category

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -13,3 +13,8 @@ body {
 .bg-blue-light {
   background-color: $blue-light-color;
 }
+// custom andt-design
+
+  .ant-menu-item-only-child{
+     padding-right: 10px;
+  }
