--- a/src/components/home-page/featured-posts/index.module.scss
+++ b/src/components/home-page/featured-posts/index.module.scss
@@ -1,7 +1,8 @@
 .latest {
   width: 90%;
   max-width: 80rem;
-  margin: var(--size-8) auto;
+  // margin: var(--size-8) auto;
+  margin: auto;
   padding-top: 100px;
 }
 
@@ -10,6 +11,7 @@
   color: var(--color-grey-800);
   text-align: center;
 }
+
 
 @media (min-width: 768px) {
   .latest h2 {
